# vus-life

./: .gitignore  API_DOCUMENTATION.md  README.md  WEB_APP_GUIDE.md  env_template.txt  json_to_df_result.ipynb
.agent/rules/: frontend.md
.cursor/rules/: frontend.mdc
Results/: Prediction Result of FBN1 on VCEP.csv  README.md
Test Data/:  BRCA1.txt   BRCA1_small.txt   BRCA2.txt  FBN1_test.csv
backend/: config.toml  hgvs_to_vcf.py  pyproject.toml
backend/tools/clinical_db_fetcher/: __init__.py
backend/tools/clinical_db_fetcher/clients/: __init__.py
backend/tools/clinical_db_fetcher/utils/: __init__.py  http.py
backend/tools/training_data_processors/: brca_process.py  clinvar_process.py  lovd_process.py  test_spdi_vcf.py
backend/tools/variant_processor/: get_gene_transcript_info.py  hgvs_c_to_g.py  hgvs_g_to_vcf.py  vcf_to_hgvs_g.py
backend/utils/: config_loader.py  config_writer.py  disk_cache_decorator.py
frontend/: api_sender.py  app.py  app_run.py
frontend/configs/: CONFIG_README.md  QUICK_START.md  (+5 more)
taks/: hgvsc_process.py  merge_files.py  pred_result_accuracy.py
tasks/: HCD_select.py  combine_result.py  convert_variants_to_metadata_format.py  find_duplicate_variants.py  get_missense_variant.py  hgvsc_process.py  merge_files.py  plot_custom_label.py  pred_result_accuracy.py  select_brca_test.py
user_database/: __init__.py  neighbor_results_manager.py  user_database_manager.py  user_database_schema.py  user_db.py  user_db_manager.py
utils/: logger.py
vus-life-app/: README.md  electron-builder.yml  package-lock.json  package.json
(+58 files in other folders)
