[project]
name = "genome_data_processors"
version = "0.1.0"
description = "Genome data processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "diskcache>=5.6.3",
    "hgvs>=1.5.6",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "tqdm",
]
